src/templates/project/project-imgs/index.scss
.slide,
.carousel-slide {
    height: 70vh;

    @media screen and (min-width: 48em) and (orientation: landscape) and (max-width: 60em) {
        height: 100vh;
    }

    @media screen and (min-width: 48em) {
        height: calc(0.66 * 85vw);
    }

    @media screen and (min-width: 64em) {
        height: 683px;
    }

    @media screen and (min-width: 122em) {
        height: 1093px;
    }
}

.carousel-dot {
    position: absolute;
    bottom: 0;
    left: 50%;

    transform: translateX(-50%);

    button.carousel__dot {
        background: none;
        border: none;
        height: 4px;
        width: 16px;
        margin: 0 4px;

        // border-radius: 50%;
        outline: none;
        opacity: 0.5;
        transition: 0.2s;

        &:last-of-type {
            // opacity: 0;

            background-color: transparent !important;
            height: 0;
            width: 0;

            &:after {
                content: 'GIF';
                height: 4px;
                width: 16px;
                position: relative;
                top: 5px;
                left: -6px;
                font-weight: 800;
                font-family: 'Nunito', sans-serif;
                opacity: 0.6;
            }
        }

        &:hover {
            opacity: 1;

            &:after {
                opacity: 1;
            }
        }

        &.carousel__dot--selected {
            opacity: 1;

            &:after {
                opacity: 1;
            }
        }
    }
}

.carousel-button {
    background: none;
    outline: none;
    border: none;
}

.desktop-gif {
    display: block;
}

.mobile-gif {
    display: none;
}

@media screen and (max-width: 48em) and (orientation: portrait) {
    .desktop-gif {
        display: none;
    }

    .mobile-gif {
        display: block;
    }
}

